# LPatternIdentification

./: LICENSE  README.md  demo.ipynb  setup.cfg
LPatternIdentification/: LPatternIdentification.py
LPatternIdentification.egg-info/: PKG-INFO  SOURCES.txt
