[metadata]
name = LPatternIdentification
version = 0.0.1
author = T Cavanagh
author_email = cavanaghtd@gmail.com
description = Identify a set of L patterns from a binary class dataset
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/temcavanagh/LPatternIdentification
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include_package_data = True